# cpp

./: .gitignore
classes_practice/: lazy_string.cpp  lazy_string.h  main.cpp  shared_buffer.cpp  shared_buffer.h
cw2/: imp_double.cpp  imp_double.h  main.cpp
cw3/src/: au_list.h
cw4/src/: maybe.h  test.cpp
functions_practice/: in.txt  main.cpp
ha1/: CMakeLists.txt  Makefile  generate_hardest_test.sh  generate_hardest_test_exp.sh  start_tests.sh
ha1/src/: CMakeLists.txt  Makefile  encoded_reader.cpp  encoded_writer.cpp  encoded_writer.h  executor.cpp  main.cpp  raw_reader.cpp  raw_writer.cpp  raw_writer.h  writer.h
ha1/test/: hardest_6kb  hardest_exp_8kb  uniform_1mb  uniform_4kb
ha2/: Makefile  README.md
ha2/src/: bits.cpp  bits.h  bits_buffer.cpp  bits_buffer.h  generate_tests..py  generate_tests.py  lint.cpp  lint.h  main.cpp  mytests.cpp  mytests.h  tests.cpp  tests.h  vector.h
ha3/: Makefile  any.cpp  any.h  test.cpp
ha3/src/: any.cpp  any.h  (+1 more)
memory_practice/: main.cpp
operators_practice/: lazy_string.cpp  lazy_string.h  main.cpp
templates/: fifo.cpp  main.cpp
templates-1-practice/: main.cpp  priority_queue.h  queue.h
templates-2/: scoped_ptr.h
templates-2-practice/: main.cpp  npe_exception.cpp  npe_exception.h  scoped_ptr.h  shared_ptr.h  unique_ptr.h
templates_linq_practice/: enumerable.h  main.cpp
virtual_functions_practice/: main.cpp  my_ostream.h  my_ostream_con.h  my_ostream_file.cpp  my_ostream_file.h
week4/: Makefile  theory.txt
week6/: theory.txt
week7/: shared_buffer.cpp  shared_buffer.h  theory.txt
week9/: Makefile
(+45 files in other folders)
